frontend/css/main.css
html {
  height:100%;
}
body{
  height:100%;
}
main {
  background:no-repeat linear-gradient(145deg, #e68a09, #8f5bfe);
  min-width:100%;
  min-height:100%;
}
.nameLink:hover{
  color:black;
}
.nameLink{
  color:black;
}
.notify-container {
    position: relative;
    display: inline-block;
  }
  
.notify-bubble {
    position: absolute;
    top: -8px;
    right: -7px;
    padding: 1px 6px 3px 6px;
    background-color: green;
    color: white;
    font-size: 0.65em;
    border-radius: 50%;
    box-shadow: 1px 1px 1px gray;
    display: none;
}

